# lecroy-mcp

./: .gitignore  .mcp.json.template  README.md  docs.py  oscilloscope.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: release.yml  tag-release.yml
resources/: maui_text.txt  wavesurfer_text.txt
