[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lecroy-mcp"
version = "0.1.0"
description = "MCP server for controlling LeCroy oscilloscopes via SCPI/VXI-11"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyvisa>=1.13.0",
    "pyvisa-py>=0.7.0",
    "pillow>=10.0.0",
]

[project.scripts]
lecroy-mcp = "server_stdio:main"

[tool.hatch.build.targets.wheel]
include = [
    "oscilloscope.py",
    "server.py",
    "server_stdio.py",
    "docs.py",
]
